<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- App Name -->
    <string name="app_name">Aptasari</string>
    <string name="app_name_with_hashtag">#AplikasiTembangBali</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Title -->
    <string name="title_onboarding">Game Edukasi\nTembang Bali</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_register_success" tools:ignore="TypographyEllipsis">Hore...\nRegistrasi berhasil</string>
    <string name="title_forgot_password">Lupa password yaa???</string>
    <string name="title_greeting">Haii %s,\nApa kabar hari ini?</string>
    <string name="title_greeting_anonymous">Haii,\nApa kabar hari ini?</string>
    <string name="title_category_level">Kategori/Level</string>
    <string name="title_choose_target">Pilih Target</string>
    <string name="title_home">Beranda</string>
    <string name="title_profile">Akun Saya</string>
    <string name="title_account_setting">Pengaturan Akun</string>
    <string name="title_learning_target">Notifikasi Target Belajar</string>
    <string name="title_logout">Keluar</string>
    <string name="title_quiz_text">Jawab pertanyaan ini</string>
    <string name="title_quiz_audio">Dengarkan suara ini</string>
    <string name="title_quiz_audio_input">Cobalah kamu meniru suara ini</string>
    <string name="title_quiz_result">Selamat</string>
    <string name="title_checking_updates">Memeriksa pembaruan data</string>
    <string name="title_app_launch">Memulai aplikasi</string>
    <string name="title_updating_data">Memperbarui data</string>
    <string name="title_populating_data">Menyimpan data baru</string>
    <string name="title_failed_check_update">Gagal untuk memeriksa pembaruan</string>
    <string name="title_recheck_updates">Memeriksa kembali pembaruan data</string>
    <string name="title_populate_success">Berhasil menambahkan data baru</string>
    <string name="title_populate_error">Gagal menambahkan data baru</string>
    <string name="title_quiz_exit">Keluar dari Level</string>
    <string name="title_download_files">Mengunduh file dari server</string>
    <string name="title_download_files_process">Mengunduh file: %s (%s)</string>
    <string name="title_download_files_completed">Semua file berhasil diunduh</string>
    <string name="title_download_files_error">Gagal mengunduh file</string>

    <!-- Subtitle -->
    <string name="subtitle_onboarding">Saking Tuhu Manah Guru\nKaweruhin Luir Senjata</string>
    <string name="subtitle_register_success">Silahkan cek emailmu untuk verifikasi akun yaa</string>
    <string name="subtitle_login_with">Login dengan</string>
    <string name="subtitle_forgot_password" tools:ignore="TypographyEllipsis">Jangan khawatir yaa,\nKamu masih bisa mengubah password.\nSilahkan masukkan akun emailmu yang tertaut dengan akun Aptasari yaa...</string>
    <string name="subtitle_forgot_password_email_sent">Silahkan lakukan reset password melalui link yang telah dikirimkan ke emailmu</string>
    <string name="subtitle_learning_target">Pilih target belajarmu, kamu bisa merubah target ini lagi nanti</string>
    <string name="subtitle_quiz_result">Kamu telah menyelesaikan level ini. Kamu telah menjawab %d dengan benar dari %d soal lho..</string>
    <string name="subtitle_quiz_exit">Kamu yakin ingin keluar dari level ini? Sedikit lagi kamu bisa menyelesaikan level ini lho..</string>
    <string name="subtitle_update_check_failed">Ups.. terjadi kesalahan saat melakukan pengecekan data. Ingin mengulanginya lagi?</string>

    <!-- Label -->
    <string name="label_username">Username</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Konfirmasi Password</string>
    <string name="label_search" tools:ignore="TypographyEllipsis">Cari...</string>
    <string name="label_address">Alamat</string>

    <!-- Button -->
    <string name="btn_login">Login</string>
    <string name="btn_login_google">Google</string>
    <string name="btn_register">Register</string>
    <string name="btn_continue" tools:ignore="TypographyEllipsis">Lanjut...</string>
    <string name="btn_continue_quiz">Lanjutkan</string>
    <string name="btn_forgot_password">Lupa password?</string>
    <string name="btn_back">Back</string>
    <string name="btn_send">Kirim</string>
    <string name="btn_send_again">Kirim Ulang</string>
    <string name="btn_positive">Iya</string>
    <string name="btn_negative">Batalkan</string>
    <string name="btn_save">Simpan</string>
    <string name="btn_check">Periksa</string>
    <string name="btn_checking">Memeriksa</string>
    <string name="btn_wrong_answer">Salah</string>
    <string name="btn_correct_answer">Benar</string>
    <string name="btn_end_quiz">Selesai</string>
    <string name="btn_back_to_level">Kembali ke Level</string>
    <string name="btn_record_start">Rekam</string>
    <string name="btn_record_stop">Stop</string>

    <!-- Learning Target -->
    <string name="target_title_relax">Santai</string>
    <string name="target_title_normal">Biasa</string>
    <string name="target_title_serious">Serius</string>
    <string name="target_title_intense">Giat</string>
    <string name="target_description_relax">5 menit sehari</string>
    <string name="target_description_normal">10 menit sehari</string>
    <string name="target_description_serious">15 menit sehari</string>
    <string name="target_description_intense">20 menit sehari</string>

    <!-- Recorder Status -->
    <string name="record_waiting" tools:ignore="TypographyEllipsis">Menunggu rekaman...</string>
    <string name="record_recording" tools:ignore="TypographyEllipsis">Sedang merekam...</string>
    <string name="record_stopped" tools:ignore="TypographyEllipsis">Rekaman tersimpan...</string>

    <!-- Helper -->
    <string name="helper_empty_username">Username tidak boleh kosong</string>
    <string name="helper_empty_email">Email tidak boleh kosong</string>
    <string name="helper_empty_password">Password tidak boleh kosong</string>
    <string name="helper_empty_confirm_password">Konfirmasi password tidak boleh kosong</string>
    <string name="helper_invalid_email">Format email tidak valid</string>

    <!-- Success -->
    <string name="success_register">Registrasi berhasil! Silahkan login dengan akunmu</string>
    <string name="success_send_forgot_password_email">Email telah terkirim! Mohon periksa emailmu</string>
    <string name="success_set_target_alarm">Berhasil menyetel notifikasi target belajarmu</string>
    <string name="success_request_audio_record_permission">Izin mengakses mic telah berhasil diminta</string>
    <string name="success_update_general">Perubahan berhasil disimpan</string>

    <!-- Error -->
    <string name="error_default">Terjadi kesalahan! Mohon coba kembali</string>
    <string name="error_register">Registrasi gagal! Mohon coba kembali</string>
    <string name="error_register_password_not_match">Password konfirmasi salah!</string>
    <string name="error_login">Login gagal! Mohon coba kembali</string>
    <string name="error_user_not_found">Akun tidak ditemukan atau belum terdaftar!</string>
    <string name="error_send_forgot_password_email">Gagal mengirim email! Mohon periksa email atau coba kembali</string>
    <string name="error_email_not_verified">Mohon verifikasi email sebelum melanjutkan</string>
    <string name="error_quiz_no_selected_answer">Pilih jawaban kamu terlebih dahulu</string>
    <string name="error_invalid_token_id">Mohon maaf, id token google kamu tidak valid</string>
    <string name="error_invalid_audio_input_question">Terjadi kesalahan dalam membanca data pertanyaan</string>
    <string name="error_waiting_audio_input">Sedang menunggu input audio</string>

    <!-- Notification -->
    <string name="notif_title_learning_target">Ayo Belajar Sekarang!</string>
    <string name="notif_subtitle_learning_target">Kamu belum memenuhi target belajarmu selama %s menit per hari!</string>

    <!-- Others -->
    <string name="question_have_account">Belum punya akun?</string>
    <string name="question_logout">Yakin ingin keluar dari akun ini?</string>
    <string name="timer_default">00:00</string>
    <string name="permission_notification_request">Izinkan aplikasi untuk menampilkan notifikasi.</string>

</resources>